<resources>
    <string name="app_name">Say My Name</string>
    <!--facebook id-->
    <string name="facebook_app_id">489361441254122</string>


    <!--menu strings-->
    <string name="action_settings">Settings</string>

    <!--tab_1 strings-->
    <string name="say_my_name_string">Say My Name</string>
    <string name="swipe_me">Swipe Me</string>
    <string name="switch_text_on">Dudes</string>
    <string name="switch_text_off">Chicks</string>

    <!--tab_2 strings-->
    <string name="tab_2_textView">So you\'re ready to make a bold career move and go from office-worker zero to pole-dancing hero huh! Well you\'re not gonna get too far in this biz with your boring old birth name.</string>
    <string name="tab_2_you_need_textView">You need&#8230;</string>

    <!--tab_3 strings-->
    <string name="tab_3_A">A</string>
    <string name="tab_3_stripper">Stripper</string>
    <string name="tab_3_name">Name!</string>
    <string name="tab_3_button">Let\'s dance!</string>
    <string name="title_activity_stripper_name">StripperNameActivity</string>

    <!--Stripper name parameter strings-->
    <string name="content_stripper_name_deets">Gimee deets</string>
    <string name="pet_name">First pet\'s name</string>
    <string name="muppet_name">Favorite Muppet\'s name</string>
    <string name="grandparent_name">Grandparent\'s first name</string>
    <string name="fast_food">Favorite fast food entree</string>
    <string name="ice_cream">Favorite ice cream topping</string>
    <string name="street_name">Street you grew up on</string>
    <!--name generator buttons-->
    <string name="traditional_name_generator">Original</string>
    <string name="american_name_generator">American</string>
    <string name="freaky_name_generator">Freaky</string>

    <!--Muppet Array-->
    <string-array name="muppets_array">
        <item>Favorite Muppet\'s name</item>
        <item>Kermit</item>
        <item>Grover</item>
        <item>Big Bird</item>
        <item>Animal</item>
        <item>Skeeter</item>
        <item>Piggy</item>
        <item>Fozzy</item>
        <item>Janice</item>
        <item>Beaker</item>
        <item>Elmo</item>
        <item>Gonzo</item>
        <item>Rizzo</item>
        <item>Scooter</item>
        <item>Camilla</item>
        <item>Elmo</item>
    </string-array>

    <!--Fast Food Array-->
    <string-array name="fast_food_array">
        <item>Favorite Fast Food Entree</item>
        <item>Chalupa</item>
        <item>Big Mac</item>
        <item>Quarter Pounder</item>
        <item>Whopper</item>
        <item>Chicken Nugget</item>
        <item>Foot Long</item>
        <item>Corn Dog</item>
        <item>Croissanwich</item>
        <item>Beef \'n Cheddar</item>
        <item>Extra Crispy</item>
        <item>Pizza</item>



    </string-array>

    <!--Menu item Strings-->
    <string name="chick_theme_string">Chick Theme</string>
    <string name="dude_theme_string">Dude Theme</string>
    <string name="about_developer_string">About App</string>
    <string name="about_dev_dialog_text">This app was built as a project for Udacity\'s \"How to create \u003canything\u003e in Android\" course. Check it out at Udacity.com</string>




    <!--CompletedStripperNameActivity String-->
    <string name="your_name_is_string">Your stripper name is</string>
    <!--Share strings-->
    <string name="share_subject_string">I used \"Say My Name\" to find my Stripper Name!</string>
    <string name="my_name_is_string">My stripper name is</string>
    <string name="how_hot_string">\n\nHow hot is that?</string>
    <string name="find_out_string">\nFind out your stripper name with \"Say My Name\" on Google Play: https://goo.gl/x3EpF3</string>


</resources>
