<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zonkey.saymyname.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dude_theme"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/dude_theme_string"/>

        <item
            android:id="@+id/chick_theme"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/chick_theme_string"/>

        <item
            android:id="@+id/about_developer"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/about_developer_string"/>



    </group>
</menu>
