<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.zonkey.saymyname.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say_my_name_string"
        android:textStyle="italic"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stripperPicImageView"
        android:src="@drawable/fatguy"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Switch
        android:id="@+id/gender_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="8dp"
        android:textOff="@string/switch_text_off"
        android:textOn="@string/switch_text_on"
        android:showText="true"
        android:layout_gravity="center_horizontal"
        android:thumbTextPadding="4dp"
        android:textColor="@android:color/white"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_me"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/arrow"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
