<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.zonkey.saymyname.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Say My Name"
        android:textStyle="italic"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/fatguy"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="8dp"
        android:textOff="@string/switch_text_off"
        android:textOn="@string/switch_text_on"
        android:layout_gravity="center_horizontal"
        android:showText="true"
        android:thumbTextPadding="4dp"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_me"
            android:layout_gravity="bottom"
            android:textColor="@android:color/white"
            android:textSize="36sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/arrow"
            android:layout_gravity="end"/>
    </LinearLayout>
</LinearLayout>
